# libdebctrl

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
debian/: changelog  control  copyright  libdebctrl-dev.install  libdebctrl-ruby1.8.install  libdebctrl0.install  rules
debian/patches/: fix-stuff-up  no-docs  series
docs/: Doxyfile  Doxyfile.author  Makefile
examples/: Makefile  Makefile.am  Makefile.in
examples/display/: .gitignore  Makefile  Makefile.am  Makefile.in  debug.c  debug.h  display.c
examples/display/debian/: control
examples/vercmp/: .gitignore  Makefile.am  Makefile.in  vercmp  vercmp.c
helpers/: platforms.pl
include/: .gitignore  config.h.in  debctrl.h
include/debctrl/: common.h  control.h  defaults.h  error.h  parser.h  util.h  validate.h  version.h
src/: Makefile  Makefile.am  Makefile.in  control.c  error.c  libdebctrl.pc  libdebctrl.pc.in  parser.c  util.c  validate.c  version.c
